--- a/closed_svg_path_proc/Cargo.toml
+++ b/closed_svg_path_proc/Cargo.toml
@@ -11,5 +11,5 @@ svgtypes = "0.15.3"
 roxmltree = "0.20.0"
 quote = "1.0"
 syn = "2.0"
-proc-macro2 = "1.0"
+proc-macro2 = {version="1.0", features = ["span-locations"] }
 closed_svg_path = {path="../closed_svg_path"}
