--- a/closed_svg_path/Cargo.toml
+++ b/closed_svg_path/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2024"
 embedded-graphics-core = "0.4.0"
 embedded-graphics = "0.8.1"
 num-traits ={ version= "0.2.19", default-features = false, features = ["libm"]  }
-
+num_enum = { version = "0.7", default-features = false }
